2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-panel-screenshot.c: Fix typo in gconf key (gnome_screenshot
	instead of gnome-screenshot). Fixes bug #303891. Patch by Trent
	"Lathiat" Lloyd.

2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* screenshot-dialog.c: mark a string for translation, remove an
	unnecessary function call

2004-12-22  Vincent Noel  <vnoel@cox.net>

	* gnome-panel-screenshot.c (main, prepare_screenshot_timeout):
	When called with --delay, call gtk_main() otherwise the g_timeout
	is never called. Fixes bug #161461.

2004-12-21  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-screenshot.glade:  Use proper HIG spacing in table1,
	replace file_chooser_frame with file_chooser_box to remove
	extra padding from around the file-chooser-button.
	 
	* screenshot-dialog.c: (screenshot_dialog_new):  Replace
	file_chooser_frame with file_chooser_box.
	 
2004-12-16  Vincent Noel  <vnoel@cox.net>

	* screenshot-dialog.c (screenshot_dialog_new): Use new
	GtkFileChooserButton API.

2004-11-10  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-screenshot.schemas.in, gnome-panel-screenshot.c: 
	Follow gconf naming standard.
	 
Wed Nov 10 01:15:02 2004  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c: Save the last directory visited to
	gconf.  Remove dead code.  M-x clean-line-ends

	* gnome-screenshot.glade: resizable->False; has_default->True;
	redo layout.

	* screenshot-dialog.c: Fixes to DnD.  Render insensitive when
	saving.  Redo layout to use a GtkFileChooserButton.

	* screenshot-xfer.c: Minor changes in prep for upcoming big merge.

2004-11-06  Fernando Herrera  <fherrera@onirica.com>

	* screenshot-dialog.c: (screenshot_dialog_new): use the new
	 glade filename.

Wed Nov  3 11:53:02 2004  Jonathan Blandford  <jrb@redhat.com>

	* screenshot-xfer.[ch]: remove bogus old dialog stuff.

Wed Nov  3 11:29:28 2004  Jonathan Blandford  <jrb@redhat.com>

	* New ChangeLog to go along with module move.
